--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5433;Database=portfolio1;Username=postgres;Password=123"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=portfolio1;Username=postgres;Password=vIKa2206"
   },
   "AllowedHosts": "*"
 }
